# artifacts/api-server/src/routes/index.ts
@@ -1,11 +1,9 @@
 import { Router, type IRouter } from "express";
-import healthRouter from "./health";
 import enquiriesRouter from "./enquiries";
 import contactsRouter from "./contacts";
 
 const router: IRouter = Router();
 
-router.use(healthRouter);
 router.use(enquiriesRouter);
 router.use(contactsRouter);
 
